--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -22,7 +22,8 @@
   }
   .h4 {
     justify-content: center;
-    margin-bottom: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     width: 100%;
   }
 }
